# SmartConverter

./: .gitignore  README.md  install.sh  pyproject.toml  pyrightconfig.json  requirements.txt  uninstall.sh
smart_converter/: __init__.py  main.py
smart_converter/core/: __init__.py  doc_engine.py  media_engine.py  orchestrator.py
smart_converter/interfaces/: __init__.py  cli.py  gui_gtk.py
smart_converter/nautilus_ext/: SmartConverterExt.py
